--- a/src/public/styles/output.css
+++ b/src/public/styles/output.css
@@ -608,6 +608,10 @@ video {
   top: 104%;
 }
 
+.top-\[10px\] {
+  top: 10px;
+}
+
 .top-\[4px\] {
   top: 4px;
 }
@@ -690,12 +694,24 @@ video {
   margin-bottom: 0.25rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
 
 .mb-5 {
   margin-bottom: 1.25rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .mb-\[0px\] {
@@ -850,6 +866,14 @@ video {
   height: 59%;
 }
 
+.h-\[600px\] {
+  height: 600px;
+}
+
+.h-\[80\%\] {
+  height: 80%;
+}
+
 .h-\[87\%\] {
   height: 87%;
 }
@@ -897,6 +921,10 @@ video {
 
 .min-h-\[87\%\] {
   min-height: 87%;
+}
+
+.min-h-\[600px\] {
+  min-height: 600px;
 }
 
 .w-1\/2 {
@@ -1008,6 +1036,10 @@ video {
   min-width: 200px;
 }
 
+.min-w-\[500px\] {
+  min-width: 500px;
+}
+
 .min-w-\[80px\] {
   min-width: 80px;
 }
@@ -1022,6 +1054,10 @@ video {
 
 .max-w-\[200px\] {
   max-width: 200px;
+}
+
+.max-w-\[400px\] {
+  max-width: 400px;
 }
 
 .max-w-\[600px\] {
@@ -1046,6 +1082,12 @@ video {
 
 .resize {
   resize: both;
+}
+
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .grid-cols-1 {
@@ -1082,6 +1124,10 @@ video {
 
 .justify-start {
   justify-content: flex-start;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1224,6 +1270,16 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
 .bg-transparent {
   background-color: transparent;
 }
@@ -1231,6 +1287,16 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.object-center {
+  -o-object-position: center;
+     object-position: center;
 }
 
 .p-2 {
@@ -1244,6 +1310,11 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -1305,6 +1376,10 @@ video {
 
 .text-right {
   text-align: right;
+}
+
+.align-baseline {
+  vertical-align: baseline;
 }
 
 .text-2xl {
@@ -1377,6 +1452,10 @@ video {
   font-weight: 600;
 }
 
+.leading-tight {
+  line-height: 1.25;
+}
+
 .text-\[\#606781\] {
   --tw-text-opacity: 1;
   color: rgb(96 103 129 / var(--tw-text-opacity));
@@ -1385,6 +1464,11 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -1413,6 +1497,18 @@ video {
 
 .opacity-30 {
   opacity: 0.3;
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline {
@@ -2269,8 +2365,47 @@ table tbody .tr-hidden{
   display: none;
 }
 
+.bg_cat{
+  transform: scaleX(1);
+}
+
+@media screen and (max-width:700px) {
+  #formContainer {
+    z-index: 1;
+    min-width: 100%;
+    background: url(https://f005.backblazeb2.com/file/WeatherApp/catGojo.png) no-repeat;
+    position: relative;
+    background-size: cover;
+    background-position: right;
+  }
+
+  #formContainer::before {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5);
+  }
+
+  .redirectParent{
+    gap: 15px;
+  }
+
+  #formContainer .darkMode{
+    display: none;
+  }
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-200:hover {
@@ -2291,6 +2426,11 @@ table tbody .tr-hidden{
 .hover\:text-blue-300:hover {
   --tw-text-opacity: 1;
   color: rgb(147 197 253 / var(--tw-text-opacity));
+}
+
+.hover\:text-blue-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -2567,6 +2707,24 @@ table tbody .tr-hidden{
 
   .max-\[780px\]\:pb-\[70px\] {
     padding-bottom: 70px;
+  }
+}
+
+@media (max-width: 700px) {
+  .max-\[700px\]\:hidden {
+    display: none;
+  }
+
+  .max-\[700px\]\:h-auto {
+    height: auto;
+  }
+
+  .max-\[700px\]\:w-1\/2 {
+    width: 50%;
+  }
+
+  .max-\[700px\]\:min-w-\[300px\] {
+    min-width: 300px;
   }
 }
 
