--- a/src/templates/views/login.hbs
+++ b/src/templates/views/login.hbs
@@ -9,8 +9,8 @@
 <body class="">
     {{!-- Create a login form which ask for email and password --}}
     <div class="flex flex-row w-full">
-        <div class="bg_cat w-full bg-red-300 h-screen max-[700px]:hidden">
-            <img src="./resources/catGojo2.png" alt="cat" class="w-full h-full object-cover object-center" id="cat_img">
+        <div class="bg_cat w-fullh-screen max-[700px]:hidden">
+            <img src="https://f005.backblazeb2.com/file/WeatherApp/catGojo.png" alt="cat" class="w-full h-full object-cover object-center" id="cat_img">
         </div>
 
         
