--- a/src/public/styles/input.css
+++ b/src/public/styles/input.css
@@ -754,7 +754,7 @@ thead th:nth-child(2), tbody td:nth-child(2) {
     #formContainer {
       z-index: 1;
       min-width: 100%;
-      background: url(https://f005.backblazeb2.com/file/WeatherApp/catGojo.png) no-repeat;
+      background: url(https://f005.backblazeb2.com/file/WeatherApp/catGojo.jpg) no-repeat;
       position: relative;
       background-size: cover;
       background-position: right;
