--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -6,7 +6,10 @@
     <title>Purrfect Weather</title>
     {{>link}}
 </head>
-<body class="h-screen bg-[#EEF6FF] dark:bg-[#00071E] relative dark:text-white">
+<body class="h-screen bg-[#EEF6FF] dark:bg-[#00071E] relative dark:text-white homePage">
+    {{>error}}
+    {{>info}}
+
     <div class="search_cover hidden absolute top-0 bottom-0 left-0 right-0 opacity-30 bg-black z-30"></div>
     <div class="main_container grid grid-cols-layout max-[1200px]:grid-cols-layout-sm max-[830px]:grid-cols-1 gap-2 h-auto min-[830px]:pr-3">
 
@@ -56,8 +59,8 @@
             <div class="dark-shimmer" ></div>
 
             <div class="main_card flex w-[93%] m-auto  h-[100%] dark  flex-col items-center justify-evenly relative z-10">
-                <div class="inner_main flex flex-row justify-between items-center w-full ">
-                    <div class="dark-sub-shimmer"></div>
+                <div class="inner_main flex flex-row justify-between items-center w-full xl:py-[0.3rem]">
+                    <div class="dark-sub-shimmer h-[104%]"></div>
                     <div class="location items-end flex gap-3">
 
                         <img class="w-[35px] h-[40px]" src="./resources/dark_profile/map-pin-2-fill.png">
@@ -114,7 +117,7 @@
                     </div>
                     <div class="sub_card2 flex flex-row gap-2 h-[100px] items-center justify-center relative min-[831px]:bottom-[20px]">
 
-                        <div class="min[1400px]:text-[3rem] text-[2rem] font-semibold main_temp">
+                        <div class="min[1400px]:text-[3rem] text-[2rem] font-semibold main_temp flex flex-row items-baseline">
                             <span class="temperature font-bold text-[3rem] min-[1400px]:text-[5rem]">33&#176;</span>
                             C
                             </div>
