--- a/src/templates/views/myCities.hbs
+++ b/src/templates/views/myCities.hbs
@@ -7,14 +7,19 @@
     {{>link}}
 
 </head>
-<body>
+<body class="myCitiesPage">
+    {{>error}}
+    {{>info}}
     {{>sidePanelAll}}
 
     <div class="main p-4 w-full max-[780px]:px-0 max-[780px]:py-0">
     {{>header}}
 
         <div class="myCities max-[780px]:m-auto outline-1 outline-[#80808082] dark:outline dark:bg-[#181c2d] bg-white rounded-[10px] h-auto w-[95%] max-[900px]:w-[92%] m-auto p-4 max-[1200px]:mr-0 max-[780px]:pb-[70px] min-h-[87%] relative">
+            <div class="flex flex-row justify-between items-center">
                 <h1 class="font-bold text-2xl">Recently Searched Cities</h1>
+                <button class="bg-[#ffdbd9] text-red-600 rounded px-4 py-1 border-2 border-red-500 border-solid disabled:opacity-50" id="deleteHistory">Delete History</button>
+            </div>
                 {{#if loggedIn}}
                 <div class="cities grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-3 min-[2000px]:grid-cols-4 gap-4 mt-6">
                         {{!-- Cities Cards    --}}
@@ -26,7 +31,7 @@
             </div>
             {{/if}}
 
-            <div class="mt-[5px] w-full text-right">
+            <div class="mt-[5px] w-full text-right absolute right-0 bottom-0">
             <button class="hover:text-blue-300 px-4 py-2 rounded see_more">See More</button>
             </div>
         </div>
