--- a/src/templates/views/login.hbs
+++ b/src/templates/views/login.hbs
@@ -6,7 +6,7 @@
     <title>Login Form</title>
     {{>link}}
 </head>
-<body class="loginPage">
+<body class="loginPage max-[830px]:dark:bg-[#EEF6FF] max-[830px]:bg-[#EEF6FF]">
     {{!-- Create a login form which ask for email and password --}}
     {{>error}}
     {{>info}}
