--- a/src/templates/partials/error.hbs
+++ b/src/templates/partials/error.hbs
@@ -1,4 +1,4 @@
-<div class="error fixed bg-[#ffdbd9] text-red-600 rounded px-3 h-0 py-1 border-2 border-red-500 border-solid top-[5%] right-1/2 translate-x-1/2 z-50 flex transition-all duration-1000 opacity-0 flex-row gap-3 items-center">
+<div class="error fixed bg-[#ffdbd9] text-red-600 rounded px-0 h-0 py-0 border-red-500 border-solid top-[5%] right-1/2 translate-x-1/2 z-50 flex transition-all duration-1000 opacity-0 flex-row gap-3 items-center overflow-hidden w-auto min-[501px]:text-nowrap">
         <img src="./resources/error.svg" alt="Error">
         <span>An error occured</span>
     </div>
