--- a/src/templates/views/myCities.hbs
+++ b/src/templates/views/myCities.hbs
@@ -18,7 +18,7 @@
         <div class="myCities max-[780px]:m-auto outline-1 outline-[#80808082] dark:outline dark:bg-[#181c2d] bg-white rounded-[10px] h-auto w-[95%] max-[900px]:w-[92%] m-auto p-4 max-[1200px]:mr-0 max-[780px]:pb-[70px] min-h-[87%] relative">
             <div class="flex flex-row justify-between items-center">
                 <h1 class="font-bold text-2xl">Recently Searched Cities</h1>
-                <button class="bg-[#ffdbd9] text-red-600 rounded px-4 py-1 border-2 border-red-500 border-solid disabled:opacity-50" id="deleteHistory">Delete History</button>
+                <button class="bg-[#ffdbd9] text-red-600 rounded px-4 py-1 border-2 border-red-500 border-solid disabled:opacity-50 max-[500px]:p-[0.1rem]" id="deleteHistory">Delete History</button>
             </div>
                 {{#if loggedIn}}
                 <div class="cities grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-3 min-[2000px]:grid-cols-4 gap-4 mt-6">
