--- a/src/public/styles/input.css
+++ b/src/public/styles/input.css
@@ -90,6 +90,10 @@
     /* Clear SNow Rain*/
     color: black;
 }
+.disabledVerify{
+  background: gray!important;
+  cursor: auto;
+}
  .weather_main_card_before{
     /* content: ''; */
     position: absolute;
