--- a/src/templates/partials/otp.hbs
+++ b/src/templates/partials/otp.hbs
@@ -1,4 +1,4 @@
-<div id="otpParent" class="info fixed bg-blue-100 text-blue-700 rounded p-4 h-auto border-blue-700 border-solid top-[5%] right-1/2 translate-x-1/2 z-50 flex-col gap-3 items-start justify-center transition-all duration-1000 opacity-100 overflow-visible w-[250px] min-[501px] hidden">
+<div id="otpParent" class=" fixed bg-blue-100 text-blue-700 rounded p-4 h-auto border-blue-700 border-solid top-[5%] right-1/2 translate-x-1/2 z-50 flex-col gap-3 items-start justify-center transition-all duration-1000 opacity-100 overflow-visible w-[250px] min-[501px] hidden">
 <h1>Enter OTP:</h1>
     <div id="otp-inputs">
         <input class="w-8 text-center border-2 border-green-600 otp-input" type="text" maxlength="1">
