--- a/src/public/styles/input.css
+++ b/src/public/styles/input.css
@@ -33,6 +33,8 @@
   height: 35px;
   padding: 0rem 1rem ;
   border-width: 2px;
+  z-index: 90;
+
 }
 
 .search_box img{
@@ -685,6 +687,7 @@ body .layout_box{
 .errorInfoVisible {
   opacity: 1;
   height: auto;
+  z-index: 90;
   min-width: 300px;
   padding: 0.3rem 0.5rem;
 }
