--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -11,7 +11,7 @@
     {{>info}}
 
     <div class="search_cover hidden absolute top-0 bottom-0 left-0 right-0 opacity-30 bg-black z-30"></div>
-    <div class="main_container grid grid-cols-layout max-[1200px]:grid-cols-layout-sm max-[830px]:grid-cols-1 gap-2 h-auto min-[830px]:pr-3">
+    <div class="main_container w-full grid grid-cols-layout max-[1200px]:grid-cols-layout-sm max-[830px]:grid-cols-1 gap-2 h-auto min-[830px]:pr-3">
 
         <!-- Side Panel -->
         <div class="layout_box lg:row-span-5 row-span-8 text-center flex flex-col items-start bottom-0 justify-center fixed w-[170px] min-[830px]:w-[200px] max-[830px]:h-auto max-[830px]:w-full h-full z-20 ">
