--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -97,7 +97,7 @@
                         </div>
 
                         <div class="flex gap-4 feelsLike ">
-                            <div class="dark-sub-shimmer"></div>
+                            <div class="dark-sub-shimmer  "></div>
 
                             <img class="w-[30px] h-[30px] hidden" src="./resources/main_card/feels.png">
                             <span class="font-semibold text-[1.2rem]">Feels Like 29&#176;</span>
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="flex flex-row items-center max-[1200px]:justify-end justify-around min-[830px]:w-[90%] w-[60%] h-[200px] main_info shimmer_main_temp">
-                    <div class="dark-sub-shimmer hidden max-[830px]:h-[108%] max-[830px]:top-[-20px]" ></div>
+                    <div class="dark-sub-shimmer hidden max-[830px]:h-[108%] max-[830px]:top-[-20px] h-[110%] top-[-10px]" ></div>
                     <div class="sub_card1 mr-[0px]">
 
                         <div class="inner_subCard1 relative max-[830px]:top-[10px] min-[1400px]:w-[180px] w-[150px]">
