--- a/src/public/styles/input.css
+++ b/src/public/styles/input.css
@@ -31,6 +31,10 @@
   height: 110%;
   top: -10px;
 }
+html.dark .shimmer_main_temp .dark-sub-shimmer{
+  height: 110%;
+  top: -10px;
+}
 .errorInfoVisible{
   opacity: 1;
   height: 35px;
